# micro-nipype

./: .gitignore  pyproject.toml  setup.cfg  setup.py
nipype/: __init__.py
nipype/algorithms/: confounds.py  mesh.py  metrics.py  misc.py  modelgen.py  rapidart.py
nipype/config/: __init__.py  defaults.toml
nipype/interfaces/: c3.py  io.py  vtkbase.py
nipype/interfaces/afni/: base.py  preprocess.py
nipype/interfaces/ants/: base.py
nipype/interfaces/base/: core.py  support.py
nipype/interfaces/cmtk/: cmtk.py  nbs.py  nx.py  parcellation.py
nipype/interfaces/dipy/: anisotropic_power.py  base.py  preprocess.py  reconstruction.py  registration.py  simulate.py  stats.py  tensors.py  tracks.py
nipype/interfaces/dtitk/: base.py
nipype/interfaces/elastix/: base.py  registration.py  utils.py
nipype/interfaces/freesurfer/: longitudinal.py  petsurfer.py  preprocess.py  registration.py  utils.py
nipype/interfaces/fsl/: base.py
nipype/interfaces/mixins/: reporting.py
nipype/interfaces/mne/: base.py
nipype/interfaces/mrtrix/: convert.py  tensors.py
nipype/interfaces/mrtrix3/: base.py
nipype/interfaces/niftyreg/: base.py
nipype/interfaces/spm/: base.py  model.py
nipype/interfaces/utility/: wrappers.py
nipype/interfaces/workbench/: base.py  cifti.py  metric.py
nipype/pipeline/engine/: nodes.py  utils.py  workflows.py
nipype/pipeline/plugins/: base.py  condor.py  ipython.py  legacymultiproc.py  lsf.py  multiproc.py  oar.py  pbs.py  sge.py  slurm.py  tools.py
nipype/utils/: draw_gantt_chart.py  filemanip.py  profiler.py  provenance.py  subprocess.py
nipype/utils/tests/: test_config.py
