[metadata]
url = https://github.com/nipreps/micro-nipype
author = The NiPreps Developers
author_email = nipreps@gmail.com
maintainer = Oscar Esteban
maintainer_email = nipreps@gmail.com
description = A lightweight version of NiPype
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
install_requires =
    click >=6.6.0
    etelemetry >=0.2.0
    filelock >=3.0.0
    networkx >=2.0
    nibabel >=3.1
    numpy >=1.20
    packaging
    prov >=1.5.2
    pydot >=1.2.3
    python-dateutil >=2.2
    rdflib >=5.0.0
    scipy >=1.8
    simplejson >=3.8.0
    traits >=4.6, !=5.0

test_requires =
    codecov
    coverage <5
    pytest >=4.4
    pytest-cov
    pytest-env
    pytest-timeout

packages = find:

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    dipy
    ipython
    matplotlib
    nbsphinx
    pydotplus
    sphinx >=2.1.2
    sphinx-argparse
    sphinxcontrib-apidoc ~= 0.3.0
docs =
    %(doc)s
duecredit =
    duecredit
nipy =
    dipy
    matplotlib
    nilearn
    nipy
    nitime
profiler =
    psutil >= 5.0
pybids =
    pybids >=0.7
specs =
    black
ssh =
    paramiko

style =
    flake8 >= 3.7.0
test =
    codecov
    coverage <5
    pytest >=4.4
    pytest-cov
    pytest-env
    pytest-timeout
tests =
    %(test)s
xvfbwrapper =
    xvfbwrapper

all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(nipy)s
    %(profiler)s
    %(pybids)s
    %(specs)s
    %(ssh)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/
